# wallpaper-manager

./: Cargo.toml  README.md  flake.nix
src/: apply.rs  gui.rs  main.rs  state.rs
