[package]
name = "wallpaper-manager"
version = "0.1.0"
edition = "2021"
authors = ["Seu Nome <email@example.com>"]
description = "A CLI + GUI wallpaper tool for Hyprland"
license = "MIT"
repository = "https://github.com/seunome/wallpaper-manager"
categories = ["command-line-utilities"]
keywords = ["hyprland", "wallpaper", "wayland", "gui"]

[dependencies]
egui          = "0.27"
egui_extras   = { version = "0.27", features = ["all_loaders"] }
image = { version = "0.25", default-features = false, features = [ "png", "jpeg", "bmp", "gif", "ico", "tiff", "webp" ] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
eframe = "0.27"
rfd = "0.15.3"
epaint = "0.31.1"
